<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="user_name">User Name:</string>
    <string name="submit_from_login">Submit</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="title_activity_main_activity5">MainActivity5Activity</string>
    <string name="title_activity_main_activity6">MainActivity6</string>
    <string name="title_activity_assign_shift">AssignShift</string>
    <string name="title_activity_cafe_hours">cafe_hours</string>
    <string name="ch_start_date">START DATE</string>
    <string name="ch_end_date">END DATE</string>
    <string name="ch_day">DAY</string>
    <string name="ch_cancel_date">CANCEL DATE</string>
    <string name="ch_cafe_name">CAFE NAME</string>

    <!-- Spinner Options -->

    <string-array name="ch_spinner_day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="ch_enter_cafe_name">ENTER CAFE NAME</string>
    <string name="ch_open_time">OPEN TIME</string>
    <string name="ch_close_time">CLOSE TIME</string>
    <string name="ch_confirm">CONFIRM</string>
    <string name="ch_pick_date">PICK DATE</string>
    <string name="ch_pick_time">PICK TIME</string>
    <string name="ch_yes_button">YES</string>
    <string name="ch_no_button">NO</string>
    <string name="ch_home_button">HOME</string>
    <string name="assignShift_pickDate">pick date</string>
    <string name="title_activity_cancel__cafe__operating__hours">Cancel_Cafe_Operating_Hours</string>
    <string name="title_activity_ch_confirm_cancellation">ch_confirm_cancellation</string>
    <string name="title_activity_ch_updated_cafe_hours">ch_updated_cafe_hours</string>
    <string name="title_activity_ch_enter_or_cancel_cafehours">ch_enter_or_cancel_cafehours</string>

</resources>
