<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="msisproject1.com.project1.ch_updated_cafe_hours">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ch_title_bar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ch_image"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch_cafe_name"
        android:id="@+id/ch_cafe_name"
        android:layout_below="@+id/ch_title_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textStyle="bold"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ch_enter_cafe_name"
        android:layout_alignBottom="@+id/ch_cafe_name"
        android:layout_toRightOf="@+id/ch_cafe_name"
        android:layout_marginLeft="69dp"
        android:layout_marginStart="69dp"
        android:layout_alignTop="@+id/ch_cafe_name"
        android:textSize="@dimen/abc_text_size_small_material"
        android:layout_alignRight="@+id/ch_title_bar"
        android:layout_alignEnd="@+id/ch_title_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DATE"
        android:id="@+id/ch_updated_date"
        android:layout_below="@+id/ch_cafe_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textStyle="bold"
        android:textColor="#ff000000" />
  
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ch_updated_date1"
        android:layout_alignBottom="@+id/ch_updated_date"
        android:textSize="@dimen/abc_text_size_small_material"
        android:layout_alignRight="@+id/ch_title_bar"
        android:layout_alignEnd="@+id/ch_title_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/ch_updated_date"
        android:layout_alignLeft="@+id/ch_enter_cafe_name"
        android:layout_alignStart="@+id/ch_enter_cafe_name" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch_open_time"
        android:id="@+id/ch_open_time"
        android:layout_below="@+id/ch_updated_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textStyle="bold"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ch_updated_open_time"
        android:layout_alignBottom="@+id/ch_open_time"
        android:textSize="@dimen/abc_text_size_small_material"
        android:layout_alignRight="@+id/ch_title_bar"
        android:layout_alignEnd="@+id/ch_title_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/ch_updated_date"
        android:layout_alignLeft="@+id/ch_enter_cafe_name"
        android:layout_alignStart="@+id/ch_enter_cafe_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch_close_time"
        android:id="@+id/ch_close_time"
        android:layout_below="@+id/ch_open_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textStyle="bold"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ch_updated_close_time"
        android:layout_alignBottom="@+id/ch_close_time"
        android:textSize="@dimen/abc_text_size_small_material"
        android:layout_alignRight="@+id/ch_title_bar"
        android:layout_alignEnd="@+id/ch_title_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/ch_updated_date"
        android:layout_alignLeft="@+id/ch_enter_cafe_name"
        android:layout_alignStart="@+id/ch_enter_cafe_name" />

</RelativeLayout>